--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,37 @@ Text: Dark #333333
 
 
 body {
-  font-family:'Nunito', sans-serif;
   background-color: #F8F8F8;
+  font-family:'Nunito', sans-serif;
+font-size: 14px;
+font-weight: 300; /* weight: regular */
+line-height: 1.6;
+color: #333333
+}
+
+h1, h2, h3, h4 {
+  line-height:1.4;
+}
+h1 {
+  font-size: 3em;
+  font-weight: 400;
+}
+h2 {
+  font-size: 2.25em;
+  font-weight: 600;
+}
+h3 {
+  font-size: 1.75em;
+  font-weight: 700;
+}
+h4 {
+  font-size: 1.35em;
+  font-weight: 400;
+}
+h5 {
+  font-size: 0.875em;
+  font-weight: 700;
+  line-heigh: 1;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
 }
