--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ h1, h2, h3, h4 {
 }
 h1 {
   font-size: 3em;
-  font-weight: 400;
+  font-weight: 300;
 }
 h2 {
   font-size: 2.25em;
@@ -41,4 +41,23 @@ h5 {
   line-heigh: 1;
   letter-spacing: 0.02em;
   text-transform: uppercase;
+}
+
+
+a {
+  color: #C34E1E;
+  text-decoration: none;
+  font-weight: 600;
+}
+a.visited {
+  color: #905036;
+}
+a:hover,
+a.focus {
+  color: #2D3573;
+  text-decoration: underline;
+  text-decoration-color: #ACB3E5;
+}
+a.active {
+  color: #EB632B;
 }
