--- a/css/style.css
+++ b/css/style.css
@@ -5,36 +5,40 @@ Secondary: Navy #2D3573
 Background: Light grey #F8F8F8
 Text: Dark #333333
 */
-
-
 body {
   background-color: #F8F8F8;
-  font-family:'Nunito', sans-serif;
-font-size: 14px;
-font-weight: 300; /* weight: regular */
-line-height: 1.6;
-color: #333333
+  font-family: 'Nunito', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  /* weight: regular */
+  line-height: 1.6;
+  color: #333333
 }
 
 h1, h2, h3, h4 {
-  line-height:1.4;
+  line-height: 1.4;
 }
+
 h1 {
   font-size: 3em;
   font-weight: 300;
 }
+
 h2 {
   font-size: 2.25em;
   font-weight: 600;
 }
+
 h3 {
   font-size: 1.75em;
-  font-weight: 700;
+  font-weight: 600;
 }
+
 h4 {
   font-size: 1.35em;
   font-weight: 400;
 }
+
 h5 {
   font-size: 0.875em;
   font-weight: 700;
@@ -43,21 +47,73 @@ h5 {
   text-transform: uppercase;
 }
 
-
 a {
   color: #C34E1E;
   text-decoration: none;
   font-weight: 600;
 }
-a.visited {
+
+a:visited {
   color: #905036;
 }
+
 a:hover,
-a.focus {
+a:focus {
   color: #2D3573;
   text-decoration: underline;
   text-decoration-color: #ACB3E5;
 }
-a.active {
+
+a:active {
   color: #EB632B;
+}
+
+.button {
+  display: inline-block;
+  background-color: #C34E1E;
+  color: #F8F8F8;
+  font-weight: 600;
+  text-transform: uppercase;
+padding: 12px 40px;
+  border-radius: 12px;
+  transition: 0.2s opacity;
+}
+
+.button:visited {
+  color: #F8F8F8;
+}
+
+.button:hover {
+  opacity: 0.8;
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.button:active {
+  background-color: #915036;
+  color: #ffffff;
+}
+
+.button.secondary {
+  background-color: transparent;
+  color: #C34E1E;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  border: 2px solid #C34E1E;
+}
+
+.button.secondary:visited {
+  color: #C34E1E;
+}
+
+.button.secondary:hover {
+  background-color: #EB632B;
+  color: #ffffff;
+  text-decoration: none;
+  border: 2px solid #EB632B;
+}
+
+.button.secondary:active {
+  background-color: #915036;
+  color: #ffffff;
 }
