Clean up css code

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ Secondary: Navy #2D3573
 Background: Light grey #F8F8F8
 Text: Dark #333333
 */
+
+/*color and typography ------------------ */
 body {
   background-color: #F8F8F8;
   font-family: 'Nunito', sans-serif;
@@ -12,7 +14,7 @@ body {
   font-weight: 300;
   /* weight: light */
   line-height: 1.6;
-  color: #333333
+  color: #333333;
 }
 
 h1, h2, h3, h4 {
@@ -47,8 +49,9 @@ p.mini-title {
   text-transform: uppercase;
 }
 
+/* Layout and grids ------------------ */
 
-/* Q: this id specificity doesn't work? but when I apply img{width:100%;} as course suggested, all my images on mobile view will blow up to screen width, including logo and etc. */
+/* !Q: this id specificity doesn't work? but when I apply img{width:100%;} as course suggested, all my images on mobile view will blow up to screen width, including logo and etc. */
 img #projects{
   width: 100%;
 }
@@ -78,6 +81,7 @@ ul {
 
 }
 
+/* Hyperlink and buttons ------------------ */
 
 a {
   color: #C34E1E;
@@ -100,7 +104,7 @@ a:active {
   color: #EB632B;
 }
 
-
+/* Primary button ------------------ */
 .button {
   display: inline-block;
   background-color: #C34E1E;
@@ -127,6 +131,7 @@ a:active {
   color: #ffffff;
 }
 
+/* Secondary button ------------------ */
 .button.secondary {
   background-color: transparent;
   color: #C34E1E;
