Update styling details and typo

--- a/css/style.css
+++ b/css/style.css
@@ -43,20 +43,12 @@ h4 {
 p.mini-title {
   font-size: 0.875em;
   font-weight: 700;
-  line-heigh: 1;
+  line-height: 1;
   letter-spacing: 0.02em;
   text-transform: uppercase;
 }
 
 /* Layout and grids ------------------ */
-/* !Q: this id specificity doesn't work? but when I apply img{width:100%;} as course suggested, all my images on mobile view will blow up to screen width, including logo and etc. */
-img #projects {
-  width: 100%;
-}
-
-.hidden {
-  display:none;
-}
 
 header {
   /* background-color: #333333;   temporary color block */
@@ -78,6 +70,21 @@ footer {
 }
 
 ul {}
+
+
+/* Section details */
+#projects img{
+  width: 100%;
+}
+
+#projects section{
+  padding-top: 20px;
+}
+
+.hidden {
+  display:none;
+}
+
 
 /* Hyperlink and buttons ------------------ */
 a {
