--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,16 @@ p.mini-title {
   border-bottom: 1px solid #E5E5E5;
 }
 
+#intro-details .row {
+  padding-bottom: 25px;
+  border-bottom: 1px solid #E5E5E5;
+}
+
+#skills .row {
+  margin: 15px 0;
+}
+
+
 header {
   text-align: center;
   padding-top: 20px;
@@ -127,6 +137,25 @@ nav>ul>li>a:hover {
   width: 100%;
 }
 
+#contact {
+  text-align: center;
+}
+
+
+#ssn ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#ssn ul>li {
+  display: inline-block;
+}
+
+#ssn ul>li>a {
+  padding: 20px 10px;
+}
+
+
 /* Title and img */
 .logo {
   max-width: 70px;
@@ -134,6 +163,25 @@ nav>ul>li>a:hover {
 
 #projects img {
   width: 100%;
+}
+
+
+#my-profile img {
+  width: 80%;
+}
+
+#skills h2 {
+
+}
+
+h3.skill {
+  display: inline-block;
+  padding: 0 10px;
+}
+
+#skills h2 {
+  display: block;
+  padding: 20px 0 0 0;
 }
 
 .center {
