Set up different viewpoints

--- a/css/style.css
+++ b/css/style.css
@@ -313,3 +313,34 @@ a:active {
   background-color: #915036;
   color: #ffffff;
 }
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+}
+
+
+
+/* ==============================
+Large devices (1024px and larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+
+}
+
+
+/* ==============================
+XL devices (1440px and larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+
+}
+
+
+
+/* ==============================
+Extra-large devices (1920px or larger)
+================================= */
+@media only screen and (min-width: 1920px) {
+}
