--- a/css/style.css
+++ b/css/style.css
@@ -59,9 +59,8 @@ p.mini-title {
 }
 
 .row {
-  margin: 25px 0;
+  margin: 30px 0;
 }
-
 
 header {
   text-align: center;
@@ -87,7 +86,7 @@ footer {
 }
 
 #projects .row {
-  padding-bottom: 25px;
+  padding-bottom: 40px;
 }
 
 #hero {
@@ -109,7 +108,7 @@ footer {
   text-align: center;
 }
 
-#intro-details-1{
+#intro-details-1 {
   padding-bottom: 40px;
   background-color: #FDFDFD;
 }
@@ -119,11 +118,7 @@ footer {
   background-color: #FDFDFD;
 }
 
-
-
-
 /* list style ------------------ */
-
 nav>ul {
   list-style-type: none;
   /* remove bullet point */
@@ -170,15 +165,13 @@ nav>ul>li>a:hover {
   padding: 0;
 }
 
-
 /* Title and img -------------------- */
-
 .logo {
   max-width: 50px;
 }
 
 #projects img {
-  width: 100%;
+  max-width: 100%;
 }
 
 /*
@@ -190,10 +183,9 @@ nav>ul>li>a:hover {
   float: right;
 }
 */
-
-#my-profile img {
+#profile-img img {
   width: 50%;
-  float:left;
+  float: left;
 }
 
 .hero-intro, .brief {
@@ -218,15 +210,10 @@ a.hero-intro {
   max-width: 32px;
 }
 
-
 h3.tool {
   display: inline-block;
   margin: auto;
   padding: 0 10px;
-}
-
-#profile-img img {
-  width: 50%;
 }
 
 .center {
@@ -251,7 +238,7 @@ a:visited {
 a:hover,
 a:focus {
   color: #905036;
-/*  text-decoration: underline;
+  /*  text-decoration: underline;
   text-decoration-color: #ACB3E5; */
 }
 
@@ -264,7 +251,7 @@ a:active {
   display: inline-block;
   background-color: #C34E1E;
   color: #FFFFFF;
-font-size: 1em;
+  font-size: 1em;
   font-weight: 600;
   text-transform: uppercase;
   padding: 10px 30px;
@@ -316,51 +303,68 @@ font-size: 1em;
 Medium devices (640px and larger)
 ================================= */
 @media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
 
-    header {
-      text-align: unset;
-      padding: 20px 0 13px;
-    }
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
 
-    nav {
-      width: auto;
-      float: right;
-      margin-top: 4px;
-    }
+  body {
+    font-size: 12pt;
+  }
 
-body{
-  font-size: 12pt;
+h2 {
+  padding-top: 20px;
 }
 
-.col-md-6 {
-  width: 50%;
-}
+.container {
+  margin: 0 15px;
+  padding-top: 10px;
 }
 
+#projects {
+  padding-top: 30px;
+}
 
+  .col-md-6 {
+    width: 50%;
+    padding: 0 10px;
+  }
+
+  [class*="col-"] {
+    float: left;
+  }
+
+.row::after {
+    content:"";
+    clear: both;
+    display: table;
+  }
+
+#profile-img img {
+max-width: 30%;
+}
+
+}
 
 /* ==============================
 Large devices (1024px and larger)
 ================================= */
-@media only screen and (min-width: 1024px) {
-
-}
-
-
-
+@media only screen and (min-width: 1024px) {}
 
 
 /* ==============================
 XL devices (1440px and larger)
 ================================= */
-@media only screen and (min-width: 1440px) {
-
-}
-
+@media only screen and (min-width: 1440px) {}
 
 
 /* ==============================
 Extra-large devices (1920px or larger)
 ================================= */
-@media only screen and (min-width: 1920px) {
-}
+@media only screen and (min-width: 1920px) {}
