--- a/css/style.css
+++ b/css/style.css
@@ -132,19 +132,26 @@ nav>ul>li {
   font-size: 0.875em;
 }
 
+
+
+
+
 nav>ul>li>a {
   padding: 0 15px;
   text-transform: uppercase;
   font-weight: 600;
+  color: #828282;
 }
 
 nav>ul>li>a:visited {
-  color: #C34E1E;
+  color: #828282;
 }
 
 nav>ul>li>a:hover {
-  color: #905036;
+  color: #C34E1E;
 }
+
+
 
 #ssn ul {
   list-style-type: none;
@@ -507,6 +514,47 @@ Large devices (1024px and larger)
     display: inline-block;
     max-width: 60%;
   }
+
+
+  .cl-effect a::before,
+  .cl-effect a::after {
+  	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	width: 100px;
+  	height: 100px;
+  	border: 2px solid #F8F6F5;
+  	border-radius: 50%;
+  	content: '';
+  	opacity: 0;
+  	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
+  	transition: transform 0.3s, opacity 0.3s;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  	transform: translateX(-50%) translateY(-50%) scale(0.2);
+  }
+
+  .cl-effect a::after {
+  	width: 90px;
+  	height: 90px;
+  	border-width: 6px;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  	transform: translateX(-50%) translateY(-50%) scale(0.8);
+  }
+
+  .cl-effect a:hover::before,
+  .cl-effect a:hover::after,
+  .cl-effect a:focus::before,
+  .cl-effect a:focus::after {
+  	opacity: 1;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(1);
+  	transform: translateX(-50%) translateY(-50%) scale(1);
+  }
+
+
 }
 
 /* ==============================
@@ -578,6 +626,47 @@ XL devices (1440px and larger)
     display: inline-block;
     max-width: 60%;
   }
+
+
+  .cl-effect a::before,
+  .cl-effect a::after {
+  	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	width: 100px;
+  	height: 100px;
+  	border: 2px solid #F8F6F5;
+  	border-radius: 50%;
+  	content: '';
+  	opacity: 0;
+  	-webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  	-moz-transition: -moz-transform 0.3s, opacity 0.3s;
+  	transition: transform 0.3s, opacity 0.3s;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
+  	transform: translateX(-50%) translateY(-50%) scale(0.2);
+  }
+
+  .cl-effect a::after {
+  	width: 90px;
+  	height: 90px;
+  	border-width: 6px;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
+  	transform: translateX(-50%) translateY(-50%) scale(0.8);
+  }
+
+  .cl-effect a:hover::before,
+  .cl-effect a:hover::after,
+  .cl-effect a:focus::before,
+  .cl-effect a:focus::after {
+  	opacity: 1;
+  	-webkit-transform: translateX(-50%) translateY(-50%) scale(1);
+  	-moz-transform: translateX(-50%) translateY(-50%) scale(1);
+  	transform: translateX(-50%) translateY(-50%) scale(1);
+  }
+
+
 }
 
 /* ==============================
