--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ footer {
   width: 100%;
 }
 
-#project-1, #intro-details-2, {
+#project-1, #intro-details-2 {
   background-color: #F8F6F5;
   padding: 10px 0;
 }
@@ -409,6 +409,29 @@ Medium devices (640px and larger)
     display: table;
   }
 
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    grid-gap: 30px;
+
+  }
+
+  .grid-col-left {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+
+  .grid-col-right {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+
+  .grid-col-lr {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+
   #projects {
     padding-top: 30px;
   }
@@ -446,7 +469,7 @@ Large devices (1024px and larger)
   }
 
   .container {
-    max-width: 1200px;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
@@ -478,6 +501,41 @@ Large devices (1024px and larger)
     clear: both;
     display: table;
   }
+
+
+    .grid-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      justify-content: space-between;
+      grid-gap: 50px;
+
+    }
+
+    .grid-col1 {
+      grid-column-start: 1;
+      grid-column-end: 2;
+    }
+
+    .grid-col2 {
+      grid-column-start: 2;
+      grid-column-end: 3;
+    }
+
+    .grid-col3 {
+      grid-column-start: 3;
+      grid-column-end: 4;
+    }
+
+    .grid-col12-left {
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+
+    .grid-col23-right {
+      grid-column-start: 2;
+      grid-column-end: 4;
+    }
+
 
   .logo {
     max-width: 70px;
@@ -548,6 +606,33 @@ XL devices (1440px and larger)
     content: "";
     clear: both;
     display: table;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-between;
+
+  }
+
+  .grid-col1 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+  }
+
+  .grid-col2 {
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+
+  .grid-col3 {
+    grid-column-start: 3;
+    grid-column-end: 4;
+  }
+
+  .grid-col23-right {
+    grid-column-start: 2;
+    grid-column-end: 4;
   }
 
   .logo {
