Hide profile img on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -173,8 +173,7 @@ nav>ul>li>a:hover {
 }
 
 #profile-img img {
-  width: 50%;
-  float: left;
+  display: none;
 }
 
 .hero-intro, .brief {
@@ -464,8 +463,6 @@ Large devices (1024px and larger)
     padding: 0 10px;
   }
 
-
-
   .row::after {
     content: "";
     clear: both;
@@ -485,10 +482,9 @@ Large devices (1024px and larger)
     max-width: 60%;
   }
 
-.project-page img {
-  max-width: 100%;
-}
-
+  .project-page img {
+    max-width: 100%;
+  }
 }
 
 /* ==============================
@@ -559,5 +555,4 @@ XL devices (1440px and larger)
   .project-page img {
     max-width: 100%;
   }
-
 }
